--- a/src/index.html
+++ b/src/index.html
@@ -14,30 +14,19 @@
         
         <!-- Slider main container -->
             <div class="swiper mySwiper">
-
+                <div class="load">
+                    <h1>UNDERGROUND</h1>
+                    <div class="canvas">
+                        <div class="spinner p1"></div>
+                        <div class="spinner p2"></div>
+                        <div class="spinner p3"></div>
+                        <div class="spinner p4"></div>
+                      </div>
+                </div>
                 <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
 
                         <!-- Slides -->
-                            <!-- <div class="swiper-slide">
-                                <i class="fas fa-angle-double-left"></i>
-                                <figure>
-                                    <img src="./images/IMG_20200311_225225.jpg" />
-                                </figure>
-
-                                <div class="swiper-details">
-                                    <i class="fas fa-angle-double-right"></i>
-                                    <h1>MRN</h1>
-                                    <h3>Web Developer</h3>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam totam nulla maiores mollitia hic molestiae amet harum tempora doloremque?</p>
-                                    <div class="swiper-links">
-                                        <i class="fab fa-facebook-f"></i>
-                                        <i class="fab fa-instagram"></i>
-                                        <i class="fab fa-twitter"></i>
-                                        <i class="far fa-heart"></i>
-                                    </div>
-                                </div>
-                            </div> -->
                     </div>
 
                 <!-- If we need pagination -->
@@ -78,7 +67,7 @@
           coverflowEffect: {
             rotate: 50,
             stretch: 0,
-            depth: 80,
+            depth: 90,
             modifier: 1,
             slideShadows: true,
           },
